Organise the folders/code structure to be consistent with JIRA.

--- a/.gitignore
+++ b/.gitignore
@@ -113,5 +113,5 @@ venv.bak/
 /data
 
 # test
-#/technical_analysis/test
-#/stock_market_data/test
+#/ta_candlestick/test
+#/ta_stock_market_data/test
